--- a/Job-form.html
+++ b/Job-form.html
@@ -264,14 +264,6 @@
                             <input type="number" name="experience" id="experience" class="input2"><br>
                         </div><br><br>
                     </div><br><hr><br>
-                    <div class="line2">
-                            <p>LinkedIn</p>
-                            <input type="text" name="linkedin" id="linkedin" class="input2"><br>
-                        </div>
-                        <div class="line2">
-                            <p>Experience(year)</p>
-                            <input type="number" name="experience" id="experience" class="input2"><br>
-                        </div><br><br>
                 </div><br><br>
                 <div>
                     <div class="line2">
@@ -303,6 +295,7 @@
                 </div>
             </div><br><br>
             <form>
+                <p>Computer Skills</p>
                 <table>
                     <tr>
                         <th rowspan="2" class="antiborder"></th>
@@ -337,7 +330,7 @@
                     <tr>
                         <td class="trow1">Programming Language</td>
                         <td><input type="radio" name="programming_skill" value="beginner"></td>
-                        <td><input type="radio" name="ic_skill" value="elementary"></td>
+                        <td><input type="radio" name="programming_skill" value="elementary"></td>
                         <td><input type="radio" name="programming_skill" value="advanced" checked></td>
                         <td><input type="radio" name="programming_skill" value="expert" checked></td>
                     </tr>
